# anycubic_ha_local

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  printer_request.yml
.github/workflows/: validate.yaml
custom_components/anycubic/: __init__.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  definitions.py  diagnostics.py  entity.py  light.py  manifest.json  number.py  select.py  sensor.py  switch.py
custom_components/anycubic/anycubic_local/: __init__.py  commands.py  const.py  exceptions.py  handshake.py  models.py  mqtt.py
custom_components/anycubic/translations/: en.json
dashboards/: anycubic_dashboard.yaml
docs/superpowers/plans/: 2026-06-17-community-contribution-surface.md
docs/superpowers/specs/: 2026-06-17-community-contribution-surface-design.md
research/: PROTOCOL-VALIDATED.md
tests/: conftest.py  test_ace.py  test_camera.py  test_commands.py  test_commands_send.py  test_config_flow.py  test_const.py  test_controls.py  test_coordinator.py  test_diagnostics.py  test_handshake.py  test_light_entity.py  test_models.py  test_mqtt.py  test_multimodel.py  test_sensor.py
tests/fixtures/: info_report.json  light_report.json  multicolorbox_full.json  multicolorbox_slim.json
