[project]
name = "anycubic-local"
version = "1.0.0"
description = "AnyCubic Kobra S1 LAN-Mode client"
requires-python = ">=3.12"
dependencies = ["cryptography>=42", "paho-mqtt>=1.6"]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
dev = ["pytest", "ruff>=0.6", "pytest-homeassistant-custom-component>=0.13.200"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
